<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:title="@string/personal">
            <menu>
                <item
                    android:id="@+id/create"
                    android:icon="@drawable/ic_create_m"
                    android:title="@string/create" />
                <item
                    android:id="@+id/join"
                    android:icon="@drawable/ic_join_m"
                    android:title="@string/join" />
                <item
                    android:id="@+id/collection"
                    android:icon="@drawable/ic_collection_m"
                    android:title="@string/collection"/>
            </menu>
        </item>
        <item android:title="@string/notify">
            <menu>
                <item
                    android:id="@+id/message"
                    android:icon="@drawable/ic_message_m"
                    android:title="@string/message"/>
            </menu>
        </item>
    </group>

</menu>