<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/sign_introduce"
        android:textColor="@color/colorGray"
        android:textSize="12sp"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp">

        <RelativeLayout
            android:id="@+id/layout_sign"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="?android:attr/selectableItemBackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:text="@string/activity_profile_sign"
                android:textColor="@color/colorNavFont"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/text_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:maxLength="42"
                android:maxLines="3"
                android:maxWidth="200dp"
                android:text="@string/sign_hint"
                android:textColor="@color/colorGray"
                android:textSize="14sp"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>