<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    app:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="?android:attr/selectableItemBackground">

        <ImageView
            android:id="@+id/image_activity"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_alignParentStart="true"
            android:scaleType="centerCrop"
            android:contentDescription="@string/activity_title"
            android:src="@drawable/sky0"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="96dp"
            android:layout_toEndOf="@id/image_activity"
            android:layout_marginStart="16dp">

            <RelativeLayout
                android:id="@+id/layout_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true">

                <TextView
                    android:id="@+id/text_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/activity_title"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/text_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/activity_time"
                    android:textSize="14sp"
                    android:textColor="@color/colorNav"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/text_content"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_below="@id/layout_title"
                android:maxLines="2"
                android:maxLength="24"
                android:maxWidth="180dp"
                android:lineSpacingMultiplier="1.1"
                android:text="@string/activity_content"
                android:textSize="14sp"
                android:textColor="@color/colorNav"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_author_m"/>

                <TextView
                    android:id="@+id/text_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"
                    android:text="@string/activity_author"
                    android:textSize="14sp"
                    android:textColor="@color/colorNav"/>
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>
